--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 </head>
 <body>
-    <video autoplay loop id="bg-video">
-        <source src="https://audio.jukehost.co.uk/i42fhcnlD0luRXTOJ0ReEdaP53bCuLDp" type="video/mp4">
+    <video autoplay muted loop id="bg-video">
+        <source src="https://www.burstcloud.co/share/17a87d9cd600c1541e4de4e79d0ecc64c1f865a7b84e272595e5d0f7ee75cea3/5_6274071187861538034.mp4" type="video/mp4">
     </video>
     <div class="page-container">
       <div class="container-fluid">
